fixed white space in landing page

--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -76,8 +76,10 @@ header p {
 
 .section1 {
     @include center(horizontal);
-    margin-top: 5%;
     position: relative;
+    margin-top: -8%;
+    margin-bottom: 0; // Add this if bottom margin exists
+    padding: 0; 
 }
 
 .section1 img {
@@ -125,6 +127,7 @@ header p {
     padding-bottom: 2.5%;
     @include center(horizontal);
     @include flex();
+    margin-top: -2.5%;
 }
 
 .section2 h2 {
@@ -305,7 +308,7 @@ footer {
    }
 
    .section1 {
-    margin-top: 0%;
+    margin-top: -8%;
    }
 
    .section1 p {
@@ -414,6 +417,7 @@ footer {
   .section2 {
     @include flex-column();
     padding-left: 5%;
+    margin-top: -5%;
   }
 
   .section2 h2 {
